# finance_project

./: README.md  makefile  pyproject.toml
scripts/: el_regressor.py
src/dlstp/: __init__.py
src/dlstp/tp1/: __init__.py  a_warmup.py  b_autoregression.py  c_correlations.py  d_forecast.py
src/dlstp/tp2/: __init__.py  a_data.py  b_model.py  c_train.py  d_forecast.py
src/dlstp/tp3/: paper.md
tests/: conftest.py
tests/tp1/: test_a_warmup.py  test_b_autoregression.py  test_c_correlations.py  test_d_forecast.py
tests/tp2/: test_a_data.py  test_b_model.py  test_c_train.py  test_d_forecast.py
