[project]
name = "dlstp"
version = "0.0.2"
description = "Code for the class Deep Learning pour les Séries Temporelles"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pytest>=8.3.2",
    "pandas>=2.2.2",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "pyarrow>=17.0.0",
    "duckdb>=1.0.0",
    "scipy>=1.14.1",
    "joblib>=1.4.2",
    "torch>=2.4.1",
    "scikit-learn>=1.5.2",
    "loguru>=0.7.2",
    "pytest-timeout>=2.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dlstp"]

[tool.uv]
dev-dependencies = [
    "ipdb>=0.13.13",
    "ipython>=8.27.0",
    "pyqt6>=6.7.1",
    "rich>=13.8.0",
    "ruff>=0.6.4",
    "tabulate>=0.9.0",
    "pytest-json-report>=1.5.0",
]

[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.pydocstyle]
convention = "numpy"
add-ignore = ["D1"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    ".venv",
    "notebooks",
]
line-length = 88
indent-width = 2
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
extend-select = ["I"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
